# rl_algorithm

./: README.md  WORKSPACE
agents/: BUILD.bazel  __init__.py
agents/base/: agent_base.py  model_base.py
algorithms/: BUILD.bazel  __init__.py
algorithms/model_free/: monte_carlo_method.py  temporal_difference_method.py
algorithms/monte_carlo_model_free_method/: __init__.py  monte_carlo_base.py
bazel_scripts/: rl_algorithm_java_deps.bzl  rl_algorithm_rules.bzl  rl_envs_rules.bzl
examples/: BUILD.bazel  grpc_example.py  random_walk_example.py  random_walk_model_free_example.py
examples/client_examples/: BUILD.bazel  prototype_client.py
examples/server_examples/: BUILD.bazel  prototype_server.py  random_walk_example.py
proto/: BUILD.bazel  data_types.proto  rl_algorithm_prototype.proto  rl_algorithm_prototype_message.proto
rl_algorithm/: BUILD.bazel  __init__.py  grpc_server.py
rl_algorithm/agents/base/: __init__.py  agent_base.py  model_base.py  policy_base.py  value_function_base.py
rl_algorithm/algorithms/: BUILD.bazel  __init__.py  algorithm_worker.py
rl_algorithm/algorithms/model_free_prediction/: __init__.py  monte_carlo_method.py  temporal_difference_method.py
rl_algorithm/services/: BUILD.bazel  __init__.py  prototype_service.py
