package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")



filegroup(
    name = "base_src",
    srcs = glob(["base/**/*.py"])
)

py_library(
    name = "base",
    srcs = [
        ":base_src",
    ],
    deps = [
    ],
)


py_library(
    name = "agents",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":base",
    ],
)