package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")



filegroup(
    name = "model_free_src",
    srcs = glob(["model_free/**/*.py"])
)

py_library(
    name = "model_free",
    srcs = [
        ":model_free_src",
    ],
    deps = [
        requirement("numpy"),
    ],
)


py_library(
    name = "algorithms",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":model_free",
    ],
)