package(default_visibility = ["//visibility:public"])
load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "grpc_server",
    srcs = [
        "grpc_server.py",
    ],
    deps = [
        requirement("grpcio"),
    ],
)


py_library(
    name = "rl_algorithm",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":grpc_server",
    ],
)