package(default_visibility = ["//visibility:public"])
load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "prototype_service",
    srcs = [
        "prototype_service.py",
    ],
    deps = [
        requirement("grpcio"),
        "//proto:scenario_control_pb2_grpc",
        "//proto:scenario_control_message_pb2",
    ],
)


py_library(
    name = "services",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":prototype_service",
    ],
)