package(default_visibility = ["//visibility:public"])
load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "prototype_service",
    srcs = [
        "prototype_service.py",
    ],
    deps = [
        requirement("grpcio"),
        "//proto:rl_algorithm_prototype_pb2_grpc",
        "//proto:data_types_pb2",
        "//proto:rl_algorithm_prototype_message_pb2",

        "//rl_algorithm/algorithms",
    ],
)


py_library(
    name = "services",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":prototype_service",
    ],
)